--- a/Mariage/Mariage.csproj
+++ b/Mariage/Mariage.csproj
@@ -98,7 +98,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\ContactModel.cs" />
+    <Compile Include="Models\Email.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -267,6 +269,7 @@
     <Content Include="Views\Mariage\EditorTemplates\FileName.cshtml" />
     <Content Include="Views\Shared\PrivateForm.cshtml" />
     <Content Include="Views\Mariage\EnCoursDeDeveloppement.cshtml" />
+    <Content Include="Views\Mariage\Logements.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
