--- a/Mariage/Web.config
+++ b/Mariage/Web.config
@@ -54,4 +54,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="gbrl.arnaud@gmail.com">
+        <network enableSsl="true" defaultCredentials="false" host="smtp.gmail.com" password="xJt9$scw" port="465" userName="gbrl.arnaud@gmail.com" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
