--- a/Mariage/Web.config
+++ b/Mariage/Web.config
@@ -18,7 +18,7 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="false" targetFramework="4.5"/>
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
         <add namespace="System.Web.Helpers"/>
@@ -36,7 +36,7 @@
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
-    <customErrors mode="Off"/>
+    <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite"/>
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection"/>
@@ -56,8 +56,8 @@
   </runtime>
   <system.net>
     <mailSettings>
-      <smtp deliveryMethod="Network" from="gbrl.arnaud@gmail.com">
-        <network enableSsl="true" defaultCredentials="false" host="smtp.gmail.com" password="xJt9$scw" port="465" userName="gbrl.arnaud@gmail.com" />
+      <smtp deliveryMethod="Network" from="noreply@pepsetgab.fr">
+        <network enableSsl="true" defaultCredentials="false" host="in.mailjet.com" password="68d51795d70c2b2f5fcdc95236ba4577" port="587" userName="b0c5571f32d4c9925d2565e07bae9ac2" />
       </smtp>
     </mailSettings>
   </system.net>
