--- a/Mariage/Mariage.csproj
+++ b/Mariage/Mariage.csproj
@@ -105,8 +105,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\images\guerande.jpg" />
-    <Content Include="Content\images\papier-paille.jpg" />
+    <Content Include="Content\images\liste.png" />
+    <Content Include="Content\images\next.png" />
     <Content Include="Content\images\penbron.jpg" />
+    <Content Include="Content\images\prev.png" />
     <Content Include="Content\images\tux-gab.png" />
     <Content Include="Content\images\vitre.jpg" />
     <Content Include="Content\Kingthings_Calligraphica_2-webfont.svg" />
